--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "baraja-core/template",
-	"description": "This is a template package.",
-	"homepage": "https://github.com/baraja-core/template",
+	"name": "baraja-core/network",
+	"description": "Network utils",
+	"homepage": "https://github.com/baraja-core/network",
 	"authors": [
 		{
 			"name": "Jan Barášek",
@@ -9,7 +9,8 @@
 		}
 	],
 	"require": {
-		"php": "^8.0"
+		"php": "^8.0",
+		"nette/utils": "^3.2"
 	},
 	"require-dev": {
 		"tracy/tracy": "^2.8",
