--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require": {
 		"php": "^8.0",
-		"nette/utils": "^3.2"
+		"nette/utils": "^3.2 || ^4.0"
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^1.0",
